# lean-collab

./: .gitignore  LICENSE  Makefile  PUTNAM-2025-A2-PROOF.md  README.md  package-lock.json  requirements.txt
.claude-plugin/: plugin.json
agents/: decomposer.md  lean-composer.md  lean-prover.md
cli/: Cargo.toml
cli/src/: config.rs  ensue.rs  error.rs  goal.rs  lib.rs  main.rs
cli/src/commands/: abandon.rs  axiomatize.rs  backtrack.rs  claim.rs  compose.rs  create_goal.rs  decompose.rs  explore.rs  fix_strategies.rs  init.rs  listen.rs  mod.rs  search.rs  status.rs  subscribe.rs  suggest.rs  unclaim.rs  verify.rs  warm.rs
hooks/: hooks.json
hooks.old/: hooks.json  hooks.json.bak
scripts/: MATHLIB-INDEXER.md  claim-goal.sh  compose-proof.sh  enforce-ensue-only.sh  enforce-ensue-only.sh.bak  enforce-routing.sh  enforce-routing.sh.bak  ensue-api.sh  find-open-goals.sh  heartbeat.sh  index-mathlib.sh  init-session.sh  lean-check.sh  lint-lean.sh  listener.sh  load-session.sh  next-action.sh  populate-mathlib-lemmas.sh  pre-verify.sh  record-attempt.sh  refresh-subscriptions.sh  route-goal.sh  session-end.sh  session-start.sh  setup.sh  spawn-track.sh  validate-solutions.sh  verify-goal.sh  wait-for-event.sh
skills/lean-collab/: SKILL.md
skills/lean-syntax/: SKILL.md
skills/mathlib-knowledge/: SKILL.md
