[package]
name = "lean-collab"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for LeanTree collaborative theorem proving"
authors = ["Ensue"]

[[bin]]
name = "lc"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# HTTP client for Ensue API
reqwest = { version = "0.11", features = ["json", "stream"] }

# SSE subscriptions
eventsource-client = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cross-platform paths
directories = "5.0"

# Async stream utilities
futures = "0.3"

# UUID generation for session/claim IDs
uuid = { version = "1.6", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
